# r3nder-opengl

./: CMakeLists.txt  README.md  main.cpp
custom/include/: custom_cube.h
custom/src/: custom_cube.cpp
engine/include/: object.h  screen.h
engine/include/prebuilt/: camera.h  cube.h
engine/src/: object.cpp  screen.cpp
engine/src/prebuilt/: camera.cpp  cube.cpp
glad/include/glad/: glad.h
glad/src/: glad.c
shaders/: fragment_shader.glsl  vertex_shader.vert
